--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.2",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
+    "path": "^0.12.7",
     "request": "^2.83.0"
   }
 }
