--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.11",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
